--- a/index.html
+++ b/index.html
@@ -3,89 +3,57 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Saurabh's Personal Site</title>
+  <title>Saurabh Mishra - Web Developer</title>
+  <link rel="stylesheet" href="css/master.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <table cellspacing='20'>
-    <tr>
-      <td>
-        <img src="images/me.png" width='160' alt="saurabh mishra DP">
-      </td>
-      <td>
-        <h1>Saurabh Mishra</h1>
-        <p>
-          <em>I'm a front-end <strong>Web Developer</strong>.</em>
-        </p>
-        <p>
-          I am currently learning front-end web devlopment. I'm also working on improving my DSA. I love to solve question on leetcode and you can check my profile <a href="https://leetcode.com/saurabh-mishra/">here</a>.
-        </p>
-      </td>
-    </tr>
-  </table>
-  <hr size='2' noshade />
-  <h3>My skills</h3>
-  <table cellspacing='10'>
-    <tr>
-      <td>HTML + CSS</td>
-      <td>⭐⭐⭐⭐☆</td>
-    </tr>
-    <tr>
-      <td>JavaScript</td>
-      <td>⭐⭐⭐☆☆</td>
-    </tr>
-    <tr>
-      <td>ReactJS</td>
-      <td>⭐⭐⭐☆☆</td>
-    </tr>
-    <tr>
-      <td>DSA</td>
-      <td>⭐⭐⭐☆☆</td>
-    </tr>
-  </table>
-  <hr size='2' noshade/>
-  <h3>My hobbies</h3>
-  <ol>
-    <li>
-      Watching youtube and movies
-    </li>
-    <li>
-      Reading books
-    </li>
-    <li>
-      Travelling
-    </li>
-  </ol>
-  <hr size='2' noshade>
-  <h3>Education</h3>
-  <table cellspacing='10'>
-    <thead>
-      <tr>
-        <td>Sr. No.</td>
-        <td>Degree</td>
-        <td>Year</td>
-        <td>Percentage / GPA</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <td>BE in Computer</td>
-        <td>2021</td>
-        <td>8.13 CGPA</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Higher Secondary</td>
-        <td>2017</td>
-        <td>74.4%</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr size='2' noshade/>
-  <p>
-    Link to my <a href="https://linktr.ee/_mishra_saurabh"> contact info.</a>
-  </p>
-  <a href="contact.html">Cotact me</a>
+  <div class="first">
+    <img class="first-cloud" src="images/cloud.png" alt="cloud">
+    <h1>I'm Saurabh.</h1>
+    <p>
+      I'm a front-end web developer.
+    </p>
+    <img class="second-cloud" src="images/cloud.png" alt="cloud">
+    <img src="images/mountain.png" alt="mountain">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="my-img" src="images/saurabh.png" alt="Saurabh Image">
+      <h2>Hello</h2>
+      <p>I'm a front-end web developer with 1+ years of experience in building UI with ReactJs. I also love to solve problem solving question using DSA on leetcode.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skills-img skills-first-img" src="images/computer.png" alt="code">
+        <h3>Web Development</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skills-img skills-second-row" src="images/food.png" alt="prorgammer">
+        <h3>Eating</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you also love to eat as much as I do.</h3>
+      <p>If you also love to eat as much as I do? Let's catch up in some place where we can try out each other's favorite cuisine.</p>
+      <a class="btn" href="mailto:hey.saurabh.m@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/mishra7saurabh/">LinkedIn</a>
+    <a class="footer-link" href="http://twitter.com/_mishra_saurabh">Twitter</a>
+    <a class="footer-link" href="https://www.facebook.com/profile.php?id=100006798077233">Facebook</a>
+    <p>© Saurabh Mishra</p>
+  </div>
 </body>
 
 </html>
