--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="my-img" src="images/saurabh.png" alt="Saurabh Image">
+      <img class="my-img" src="images/Saurabh.png" alt="Saurabh Image">
       <h2>Hello</h2>
       <p>I'm a front-end web developer with 1+ years of experience in building UI with ReactJs. I also love to solve problem solving question using DSA on leetcode.</p>
     </div>
